--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@
 .text-main {
   color: #5c5c5f;
 }
+
+.text-green-f {
+  color: #89d335;
+}
+
 .vertical-line {
   border: none;
   border-left: 1px solid #fff;
@@ -85,4 +90,26 @@
   background-color: #89d335;
   width: 70%;
 }
+/* Styles for NestedDrowpdown */
+.dropdown-menu li {
+  position: relative;
+}
+
+.dropdown-menu .dropdown-submenu {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: -7px;
+}
+
+.dropdown-menu .dropdown-submenu-left {
+  right: 100%;
+  left: auto;
+}
+
+.dropdown-menu > li:hover > .dropdown-submenu {
+  display: block;
+}
+
+
 /* Styles Footer */
