--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@
   background-color: #89d335;
 }
 
+.bg-black-op{
+  background-color: #00000074;
+}
+
+
 .text-main {
   color: #5c5c5f;
 }
@@ -36,15 +41,56 @@
   height: 20px;
 }
 
+.rounded-car {
+  border-radius: 10px 10px 10px 10px;
+}
+
 .rounded-top-car {
   border-radius: 10px 10px 0 0;
+}
+
+.fs-16px {
+  font-size: 16px;
 }
 
 .fs-14px {
   font-size: 14px;
 }
+
 .fs-12px {
   font-size: 12px;
+}
+
+.fs-11px {
+  font-size: 10.5px;
+}
+
+.fs-10px {
+  font-size: 10px;
+}
+
+.fs-8px {
+  font-size: 8px;
+}
+
+.fs-responsive-m{
+  font-size: calc(0.5em + 0.7vw) !important !important;
+}
+
+.fs-responsive-s{
+  font-size: calc(0.5em + 0.5vw) !important;
+}
+
+.fs-responsive-xs{
+  font-size: calc(0.4em + 0.4vw)  !important;
+}
+
+.fs-responsive-l{
+  font-size: calc(1em + 0.5vw) !important;
+}
+
+.fs-responsive-xl{
+  font-size: calc(1.2em + 1vw) !important;
 }
 
 /*Styles header*/
@@ -110,6 +156,9 @@
 .dropdown-menu > li:hover > .dropdown-submenu {
   display: block;
 }
+
+/*styles for micrositios*/
+
 
 
 /* Styles Footer */
