--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,6 @@
   background-color: #067185;
 }
 
-
-
 .bg-acua-dark {
   background-color: #015C65;
 }
@@ -63,6 +61,11 @@
   border-radius: 10px 10px 0 0;
 }
 
+.input {
+  height: 40px;
+}
+
+
 .fs-16px {
   font-size: 16px;
 }
@@ -105,6 +108,10 @@
 
 .fs-responsive-xl{
   font-size: calc(1.2em + 1vw) !important;
+}
+
+.topN15px{
+  top:-15px;
 }
 
 /*Styles header*/
