Se actualiza el desenio de la interfaz del home, se aniaden nuevos campos al json se cambia la presentacion de especiales car y se aniade la nueva interactividad se cambian los titulos de micrositios y boletin y el contador de arboles se renderiza de forma dinamica en la pagina

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,18 @@
   top:-15px;
 }
 
+.top-75{
+  top:75%;
+}
+
+.start-75{
+  left: 75%;
+}
+
+.z-index{
+  z-index: 1000;
+}
+
 .hr-car {
   opacity: 100;
   margin: 0;
